# ZimbraMailNotifier

./: .gitignore
src/: chrome.manifest
src/defaults/preferences/: zimbranotifier.js
src/libsystray/: CMakeLists.txt  build-mingw32.sh  zimbrasystray.c  zimbrasystray.h
src/libsystray/img/: icon.xcf  iconnewmail.h  iconnomail.h  iconnotconnected.h
src/main/com/zimbra/: overlay.xul
src/main/com/zimbra/class/controller/: service.js
src/main/com/zimbra/class/service/: prefs.js  systray.js
src/main/resources/: chrome.manifest
src/modules/controller/: controller.jsm
src/modules/service/: prefs.jsm  systray.jsm
